<resources>
    <string name="app_name">超声波检测</string>
    <string name="passoruserwrong">用户名或密码错误</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="reqFailure">网络连接异常</string>
    <string name="approvalempty">请输入审批意见！</string>
    <string name="reqFalse">数据为空！</string>
    <string name="notice">提示</string>
    <string name="reportSuccess">回复意见提交成功！</string>
    <string name="reportFail">回复意见提交失败！</string>

    <string name="home_work">工作台</string>
    <string name="home_user">个人中心</string>

    <string name="toast_network_error">网络连接错误</string>
    <string name="user_name">用户名</string>
    <string name="passwords">密码</string>
    <string name="btn_pic_upload_text">上传图片</string>
    <string name="task_down">下达</string>
    <string name="sure">确定</string>
    <string name="local_observer">计划编码工程名称</string>
    <string name="local_search">查询</string>
    <string name="et_local_observer">请输入计划编号或工程名称</string>
    <string name="tv_observer_mark_local">现场位置</string>
    <string name="tv_observer_mark_dingwei">重新定位</string>
    <string name="tv_observer_mark_end">勘察结果</string>
    <string name="et_mark_input">请输入内容</string>
    <string name="tv_observer_mark_pic">现场图片</string>
    <string name="tv_progess_query_content">检测进度列表</string>
    <string name="tv_report_verification_content">报告信息</string>
    <string name="negative">取消</string>
    <string name="search">搜索</string>


</resources>
