<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include
        android:id="@+id/include"
        layout="@layout/my_include_title"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/dp_10"
        >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_observer_gray"
                android:hint="@string/et_local_observer"
                android:padding="@dimen/dp_5"
                />
            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_10"
                android:src="@drawable/delete"
                android:visibility="gone"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:text="@string/local_search"
            android:padding="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/shape_main_color"
            android:textColor="@color/white"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/main_gray_color"
        android:orientation="horizontal"
        >

        <View
            android:layout_width="@dimen/dp_6"
            android:layout_height="match_parent"
            android:background="@color/main_color"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_progess_query_content"
            android:gravity="center_vertical|center_horizontal"
            style="@style/my_largle_textview"
            />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
      >
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_gray_color" >
        <TextView
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="1.0dip"
            android:layout_marginLeft="1.0dip"
            android:layout_marginTop="1.0dip"
            android:layout_weight="1.0"
            android:background="#ffffffff"
            android:gravity="center"
            android:padding="6.0dip"
            android:text="样品编号:"
          />
        <TextView
            android:id="@+id/delivercompanyname"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="1.0dip"
            android:layout_marginLeft="1.0dip"
            android:layout_marginTop="1.0dip"
            android:layout_weight="2.0"
            android:text="内容1"
            android:background="#ffffffff"
            android:gravity="center"
          />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_gray_color" >
            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginTop="1.0dip"
                android:layout_weight="1.0"
                android:background="#ffffffff"
                android:gravity="center"
                android:padding="6.0dip"
                android:text="报告编号:"
                />
            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginTop="1.0dip"
                android:layout_weight="2.0"
                android:text="内容2"
                android:background="#ffffffff"
                android:gravity="center"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_gray_color" >
            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginTop="1.0dip"
                android:layout_weight="1.0"
                android:background="#ffffffff"
                android:gravity="center"
                android:padding="6.0dip"
                android:text="检测项目:"
                />
            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginTop="1.0dip"
                android:layout_weight="2.0"
                android:text="内容3"
                android:background="#ffffffff"
                android:gravity="center"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_gray_color" >
            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginTop="1.0dip"
                android:layout_weight="1.0"
                android:background="#ffffffff"
                android:gravity="center"
                android:padding="6.0dip"
                android:text="检测进度:"
                />
            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginTop="1.0dip"
                android:layout_weight="2.0"
                android:text="内容4"
                android:background="#ffffffff"
                android:gravity="center"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_gray_color" >
            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginTop="1.0dip"
                android:layout_weight="1.0"
                android:background="#ffffffff"
                android:gravity="center"
                android:padding="6.0dip"
                android:text="工程名称:"
                />
            <TextView
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginTop="1.0dip"
                android:layout_weight="2.0"
                android:text="内容5"
                android:background="#ffffffff"
                android:gravity="center"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>